--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,3 +1,13 @@
+<div class="jumbotron">
 <h1>Find the Best Beer Around Town!</h1>
+<p>All the Deals are Here<p>
+  <p><a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a></p>
+</div>
+
+<p>Shaw's:<p>
+<p>Lewiston Variety:<p> 
+<p>Walmart:<p>
+<p>Roopers:<p>
+
 
 
