Updated HTML text

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,13 +1,14 @@
 <div class="jumbotron">
-<h1>Find the Best Beer Around Town!</h1>
+<h1>Find the Cheapest Beer Around Town!</h1>
 <p>All the Deals are Here<p>
   <p><a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a></p>
 </div>
 
-<p>Shaw's:<p>
-<p>Lewiston Variety:<p> 
-<p>Walmart:<p>
-<p>Roopers:<p>
+<h3>Shaw's:</h3>>
+<h3>Lewiston Variety:</h3>> 
+<h3>>Walmart:</h3>>
+<h3>Roopers:</h3>
+
 
 
 
