Added Prices and Simplified

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,13 +1,14 @@
 <div class="jumbotron">
-<h1>Find the Cheapest Beer Around Town!</h1>
-<p>All the Deals are Here<p>
-  <p><a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a></p>
+<h1 class="text-center">Find the Cheapest Beer Around Town!</h1>
+<h2 class="text-center">All the Deals are Here<h3>
+
+ 
 </div>
 
-<h3>Shaw's:</h3>>
-<h3>Lewiston Variety:</h3>> 
-<h3>>Walmart:</h3>>
-<h3>Roopers:</h3>
+<h3 class="text-center">Shaw's: 12 pck of Twisted Tea for $10</h3>
+<h3 class="text-center">Lewiston Variety: PBR 30 for $16</h3>
+<h3 class="text-center">Walmart: Natty Light 30 for $18</h3>
+<h3 class="text-center">Roopers: Two 40 oz for $5</h3>
 
 
 
