Changed page view

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,15 +1,15 @@
-<div class="jumbotron">
+<div class="jumbotron" style="background-color: #00CC99">
 <h1 class="text-center">Find the Cheapest Beer Around Town!</h1>
-<h2 class="text-center">All the Deals are Here<h3>
+
 
  
 </div>
+<h1 class="text-center">Deals This Week:</h1>
 
-<h3 class="text-center">Shaw's: 12 pck of Twisted Tea for $10</h3>
+
 <h3 class="text-center">Lewiston Variety: PBR 30 for $16</h3>
 <h3 class="text-center">Walmart: Natty Light 30 for $18</h3>
 <h3 class="text-center">Roopers: Two 40 oz for $5</h3>
+<h3 class="text-center">Shaw's: 12 pck of Twisted Tea for $10</h3>
 
-
-
-
+</div>
