--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,3 +1,3 @@
 <H1>Where the CheapBrew at?</H1>
 <p> We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.<p>
-<p> Instead of stumbling across a sweet deal or seraching the stores for one, Cheapbrewhas you covered with local listings and locations.<p>
+<p> Cheapbrewhas you covered with local listings and locations to amke finding the cheapest beer easy.<p>
