--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,3 +1,27 @@
-<H1>Where the CheapBrew at?</H1>
+<div class="container">
+
+<H1>Where the CheapBrew at?!</H1>
 <p> We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.<p>
-<p> Cheapbrewhas you covered with local listings and locations to amke finding the cheapest beer easy.<p>
+
+<p> Cheapbrew has you covered with local listings and locations in Lewiston. The deals are there and we're bringing them to you here.<p>
+<p> This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.<p> 
+
+</div>
+
+
+
+<div class="container">
+
+    <form role="form" style="width:400px; margin: 0 auto;">
+        <h1>Sign up</h1>
+        
+        
+        
+        <div class="required-field-block">
+            <input type="text" placeholder="Email" class="form-control">
+            <div class="required-icon">
+                <div class="text"></div>
+            </div>
+        </div>
+
+       
