Added Jumptron in about

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
+<div class="jumbotron" style="background-color: #00CC99">
 
-<H1>Where the CheapBrew at?!</H1>
-<p> We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.<p>
+<H1><h1 class="text-center">Where the CheapBrew at?</H1>
 
-<p> Cheapbrew has you covered with local listings and locations in Lewiston. The deals are there and we're bringing them to you here.<p>
-<p> This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.<p> 
+</div>
+
+<p> We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.
+Cheapbrew has you covered with local listings and locations in Lewiston. The deals are there and we're bringing them to you here.
+This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.<p> 
 
 </div>
 
