--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,21 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">CheapBrew.com</a>
+    <a class= "navbar-brand" href="/">CheapBrew.com <img src="http://www.clker.com/cliparts/f/e/f/c/11949907341218632906beer.svg.med.png" width="25px"></a>
+
   </div>
+
+
+  
+  
+
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
+  <ul class="nav navbar-nav navbar-center">
+  <li>    <a class="navbar-brand">Find the Cheapest Beer in Town</a>
+</li></ul>
+
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li> 
@@ -34,6 +44,7 @@
 
 </div>
 </nav>
+
 <body>
 <div class="container">
  <% flash.each do |name, msg| %>
