--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,12 +1,13 @@
-<div class="jumbotron" style="background-color: #00CC99">
+
 
 <H1><h1 class="text-center">Where the CheapBrew at?</H1>
 
-</div>
+<div>
 
-<p> We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.
+<p><font color="white">We want to give you the option to spend as little as possible while finding exactly what you're looking for when it comes to your beer.
 Cheapbrew has you covered with local listings and locations in Lewiston. The deals are there and we're bringing them to you here.
-This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.<p> 
+This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.</font><p> 
+
 
 </div>
 
@@ -16,14 +17,17 @@ This page will be updated weekly, just before the weekend begins. And those on o
 
     <form role="form" style="width:400px; margin: 0 auto;">
         <h1>Sign up</h1>
-        
-        
-        
+
+
+                
         <div class="required-field-block">
             <input type="text" placeholder="Email" class="form-control">
             <div class="required-icon">
                 <div class="text"></div>
             </div>
+            	
         </div>
+
+
 
        
