--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,10 +6,8 @@
 
 
 
-<h3 class="text-center">Lewiston Variety: PBR 30 for $16</h3>
-<h3 class="text-center">Walmart: Natty Light 30 for $18</h3>
-<h3 class="text-center">Roopers: Two 40 oz for $5</h3>
-<h3 class="text-center">Shaw's: 12 pck of Twisted Tea for $10</h3>
+<h3 class="text-center">Lewiston Variety: PBR 30 for $16 and $1 Tall boys</h3>
+<h3 class="text-center">Shaw's: 2 bottles of wine for $11</h3>
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
