added image in about

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -8,12 +8,9 @@
 Cheapbrew has you covered with local listings and locations in Lewiston. The deals are there and we're bringing them to you here.
 This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.</font><p> 
 
-
 </div>
 
-
-
-
+<center><img src="http://brewblog.ca/wp-content/uploads/2009/11/beer.jpg" width="300px"
 
 
 
