--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -8,8 +8,12 @@
 
 <h3 class="text-center">Lewiston Variety: PBR 30 for $16 and $1 Tall boys</h3>
 <h3 class="text-center">Shaw's: 2 bottles of wine for $11</h3>
+<h3 class="text-center">Walmart: Rolling Rock 30 for $17.64 and Budweiser 18 for $14.28
+<p></p>
+<p></p>
 
 <!-- Begin MailChimp Signup Form -->
+<br>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#009b69; clear:left; font:14px Helvetica,Arial,sans-serif; }
