--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -9,9 +9,15 @@ Cheapbrew has you covered with local listings and locations in Lewiston. The dea
 This page will be updated weekly, just before the weekend begins. And those on our email list will recive the link to our list.</font><p> 
 
 </div>
+<div>
 
-<center><img src="http://brewblog.ca/wp-content/uploads/2009/11/beer.jpg" width="300px"
+<center><img src="http://brewblog.ca/wp-content/uploads/2009/11/beer.jpg" hspace=10 vspace=10 max-width="100%" height="200px"><img src="http://www.thebrewskireport.com/wp-content/uploads/2010/08/tbr-vinbudad2.jpg" hspace=10 vspace=10 max-width="100%" height="200px"><img src="http://www.thelostogle.com/wp-content/uploads/2012/06/pbr-poster.jpg" hspace=10 vspace=10 max-width="100%" height="200px">
 
+
+
+
+
+</div> 
 
 
        
